generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "sqlite"
  url      = env("DATABASE_URL")
}

// --- CORE ---

model Tenant {
  id        String   @id @default(uuid())
  name      String
  slug      String   @unique
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  users     User[]
  projects  Project[]
  auditLogs AuditLog[]
  materials   Material[]
  
  // Phase 9
  contractors      Contractor[]
  contractorAssignments ContractorProjectAssignment[]
  projectActivities ProjectActivity[]
  projectMilestones ProjectMilestone[]
}

model User {
  id        String   @id @default(uuid())
  email     String   @unique
  password  String
  name      String?
  role      String   @default("USER") // ADMIN, PM, USER
  tenantId  String
  tenant    Tenant   @relation(fields: [tenantId], references: [id])
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  
  contractorId String?
  contractor   Contractor? @relation(fields: [contractorId], references: [id])

  auditLogs AuditLog[]
  assignedActivities ProjectActivity[]
  notifications      Notification[]
}

model AuditLog {
  id        String   @id @default(uuid())
  action    String
  entity    String
  entityId  String
  metadata  String   @default("{}") // JSON string
  userId    String?
  user      User?    @relation(fields: [userId], references: [id])
  tenantId  String
  tenant    Tenant   @relation(fields: [tenantId], references: [id])
  createdAt DateTime @default(now())
}

// --- PROJECT MANAGEMENT ---

model Project {
  id        String   @id @default(uuid())
  name      String
  code      String?
  status    String   @default("ACTIVE")
  tenantId  String
  tenant    Tenant   @relation(fields: [tenantId], references: [id])
  currency  String   @default("USD")
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  budgets          Budget[]
  purchaseOrders   PurchaseOrder[]
  materialRequests MaterialRequest[]
  invoices         Invoice[]
  rfis             RFI[]
  inspections      Inspection[]
  changeOrders     ChangeOrder[]
  rfqs             RFQ[]
  subcontracts     Subcontract[]

  // Phase 9 Extensions
  startDate        DateTime?
  endDate          DateTime?
  globalBudget     Float?
  
  activities       ProjectActivity[]
  milestones       ProjectMilestone[]
  contractorAssignments ContractorProjectAssignment[]

  // Phase 6: Field Management
  fieldUpdates    FieldUpdate[]
  photos          Photo[]
  issues          Issue[]
  measurementTemplates MeasurementTemplate[]
  fieldDailyReports FieldDailyReport[]

  // Phase 16: Reports
  enableReports Boolean @default(false)

  // Phase 17: PM Dashboard
  enablePMDashboard Boolean @default(false)

  // Phase 18: Field Offline Queue
  enableOfflineQueue Boolean @default(false)

  // Punch List Pro
  // Punch List Pro
  enablePunchListPro Boolean @default(false)
  
  managerName     String?  // Company managing the project
}



// ... (Budget model starts here)


// --- BUDGET ---

model Budget {
  id          String       @id @default(uuid())
  projectId   String
  project     Project      @relation(fields: [projectId], references: [id])
  name        String       @default("General Budget")
  budgetLines BudgetLine[]
}

model BudgetLine {
  id             String  @id @default(uuid())
  budgetId       String
  budget         Budget  @relation(fields: [budgetId], references: [id])
  code           String
  name           String
  amountParam    Float   @default(0) // Estimated
  amountCommitted Float  @default(0) // POs
  amountExecuted Float   @default(0) // Invoices

  purchaseOrderItems PurchaseOrderItem[]
  invoiceAllocations InvoiceAllocation[]
  activities         ProjectActivity[]
}

// --- PROCUREMENT ---

model MaterialRequest {
  id        String   @id @default(uuid())
  projectId String
  project   Project  @relation(fields: [projectId], references: [id])
  title     String
  status    String   @default("DRAFT") // DRAFT, SUBMITTED, APPROVED, CLOSED
  items     String   // JSON string of requested items
  createdAt DateTime @default(now())
}

model PurchaseOrder {
  id        String              @id @default(uuid())
  projectId String
  project   Project             @relation(fields: [projectId], references: [id])
  vendor    String
  total     Float               @default(0)
  status    String              @default("DRAFT") // DRAFT, ISSUED, PARTIAL, CLOSED
  items     PurchaseOrderItem[]
  invoices  Invoice[]
  
  vendorId  String?
  vendorRel Contractor?         @relation(fields: [vendorId], references: [id])

  createdAt DateTime            @default(now())
}

model PurchaseOrderItem {
  id           String      @id @default(uuid())
  purchaseOrderId String
  purchaseOrder PurchaseOrder @relation(fields: [purchaseOrderId], references: [id])
  description  String
  quantity     Float
  unitPrice    Float
  total        Float
  budgetLineId String?
  budgetLine   BudgetLine? @relation(fields: [budgetLineId], references: [id])
}

// --- FINANCIALS ---

model Invoice {
  id            String              @id @default(uuid())
  projectId     String
  project       Project             @relation(fields: [projectId], references: [id])
  purchaseOrderId String?
  purchaseOrder PurchaseOrder?      @relation(fields: [purchaseOrderId], references: [id])
  vendor        String
  invoiceNumber String
  total         Float
  currency      String              @default("USD")
  exchangeRate  Float               @default(1.0)
  fileUrl       String?
  ocrData       String?             // JSON string of mock OCR results
  status        String              @default("PENDING") // PENDING, APPROVED, PAID
  date          DateTime
  allocations   InvoiceAllocation[]
  createdAt     DateTime            @default(now())
}

model InvoiceAllocation {
  id           String     @id @default(uuid())
  invoiceId    String
  invoice      Invoice    @relation(fields: [invoiceId], references: [id])
  budgetLineId String
  budgetLine   BudgetLine @relation(fields: [budgetLineId], references: [id])
  amount       Float
}

// --- FIELD ---

model RFI {
  id          String   @id @default(uuid())
  projectId   String
  project     Project  @relation(fields: [projectId], references: [id])
  code        String   @default("RFI-000") // e.g. RFI-001
  subject     String   @default("General")
  question    String
  answer      String?
  status      String   @default("OPEN") // OPEN, CLOSED, ANSWERED
  assignedTo  String?
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt
}

model Inspection {
  id          String   @id @default(uuid())
  projectId   String
  project     Project  @relation(fields: [projectId], references: [id])
  date        DateTime
  type        String   @default("QUALITY") // QUALITY, SAFETY, PROGRESS
  status      String   @default("PENDING") // PASSED, FAILED, PENDING
  notes       String?
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt
}

// --- CHANGE MANAGEMENT ---

model ChangeOrder {
  id          String   @id @default(uuid())
  projectId   String
  project     Project  @relation(fields: [projectId], references: [id])
  title       String
  description String?
  amount      Float
  status      String   @default("DRAFT") // DRAFT, APPROVED, REJECTED
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt
}

// --- PROCUREMENT CATALOG ---

model Material {
  id          String   @id @default(uuid())
  tenantId    String
  tenant      Tenant   @relation(fields: [tenantId], references: [id])
  name        String
  description String?
  unit        String   @default("UN") // UN, KG, M3, ETC
  costParam   Float    @default(0)    // Reference cost
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt
}

// --- SUBCONTRACTS & RFQ ---

model RFQ {
  id          String   @id @default(uuid())
  projectId   String
  project     Project  @relation(fields: [projectId], references: [id])
  title       String
  description String?
  status      String   @default("OPEN") // OPEN, CLOSED, AWARDED
  bids        Bid[]
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt
}

model Bid {
  id          String   @id @default(uuid())
  rfqId       String
  rfq         RFQ      @relation(fields: [rfqId], references: [id])
  vendor      String
  amount      Float
  status      String   @default("PENDING") // PENDING, REJECTED, ACCEPTED
  submittedAt DateTime @default(now())
}

model Subcontract {
  id          String   @id @default(uuid())
  projectId   String
  project     Project  @relation(fields: [projectId], references: [id])
  vendor      String
  title       String
  totalAmount Float
  startDate   DateTime?
  endDate     DateTime?
  status      String   @default("DRAFT") // DRAFT, ACTIVE, COMPLETED
  estimates   ProgressEstimate[]
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt
}

model ProgressEstimate {
  id            String      @id @default(uuid())
  subcontractId String
  subcontract   Subcontract @relation(fields: [subcontractId], references: [id])
  periodStart   DateTime
  periodEnd     DateTime
  amount        Float
  status        String      @default("SUBMITTED") // SUBMITTED, APPROVED, PAID
  createdAt     DateTime    @default(now())
  updatedAt     DateTime    @updatedAt
}

// --- PHASE 9: PROJECT EXPANSION ---

// 1. PROJECT EXTENSIONS (Fields added to Project model above via separate patch or verify compatibility)
// Note: We need to modify the existing Project model definition. See the separate replacement call for that.

model Contractor {
  id        String   @id @default(uuid())
  tenantId  String
  tenant    Tenant   @relation(fields: [tenantId], references: [id])
  name      String
  type      String   @default("CONTRACTOR") // CONTRACTOR, SUPPLIER
  email     String?
  phone     String?
  taxId     String?
  address   String?
  
  // Phase 10 Extended Profile
  legalName       String?
  website         String?
  specialties     String? // JSON
  certifications  String? // JSON
  insurancePolicy String?
  bankName        String?
  bankAccount     String?
  contactPersonName String?
  contactPersonPhone String?
  notes           String?

  isActive  Boolean  @default(true)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  activities ProjectActivity[]
  users      User[]
  assignments ContractorProjectAssignment[]
  purchaseOrders PurchaseOrder[]
  issues         Issue[]
}

model ProjectActivity {
  id              String   @id @default(uuid())
  tenantId        String
  tenant          Tenant   @relation(fields: [tenantId], references: [id])
  projectId       String
  project         Project  @relation(fields: [projectId], references: [id])
  
  parentId        String?
  parent          ProjectActivity? @relation("ActivityHierarchy", fields: [parentId], references: [id])
  children        ProjectActivity[] @relation("ActivityHierarchy")

  name            String
  code            String?  // Unique within project/tenant
  
  startDate       DateTime
  endDate         DateTime
  
  status          String   @default("NOT_STARTED") // NOT_STARTED, IN_PROGRESS, BLOCKED, DONE, CLOSED
  percent         Int      @default(0) // 0-100 (Cumulative)
  plannedWeight   Float    @default(1.0)
  orderIndex      Int      @default(0) // For Drag & Drop ordering
  
  contractorId    String?
  contractor      Contractor? @relation(fields: [contractorId], references: [id])
  
  assignedUserId  String?
  assignedUser    User?       @relation(fields: [assignedUserId], references: [id])

  budgetLineId    String?
  budgetLine      BudgetLine? @relation(fields: [budgetLineId], references: [id])

  // Relations
  dependencies    ActivityDependency[] @relation("ActivityDependsOn")
  predecessors    ActivityDependency[] @relation("ActivityPredecessor")
  
  progressRecords ActivityWeeklyProgress[]
  closureRecord   ActivityClosureRecord?
  
  milestones      ProjectMilestone[]

  // Phase 6: Field Management
  measurementType String   @default("QUANTITY") // QUANTITY, CHECKLIST, MILESTONE, TIME_ESTIMATE
  
  measurementTemplateId String?
  measurementTemplate   MeasurementTemplate? @relation(fields: [measurementTemplateId], references: [id])
  
  totalQty        Float?
  unit            String?

  fieldUpdates    FieldUpdateItem[]
  photos          Photo[]
  issues          Issue[]
  
  fieldDailyEntries FieldDailyEntry[]

  lastUpdateAt    DateTime @default(now())
  
  blockedReason       String?
  blockedComment      String?
  blockedEta          DateTime?
  blockedOwnerUserId  String?
  
  committedDate       DateTime?

  createdAt       DateTime @default(now())
  updatedAt       DateTime @updatedAt
}

model ActivityDependency {
  id                String          @id @default(uuid())
  tenantId          String
  projectId         String
  
  activityId        String
  activity          ProjectActivity @relation("ActivityDependsOn", fields: [activityId], references: [id])
  
  dependsOnId       String
  dependsOn         ProjectActivity @relation("ActivityPredecessor", fields: [dependsOnId], references: [id])
  
  createdAt         DateTime @default(now())
}

model ActivityWeeklyProgress {
  id            String          @id @default(uuid())
  tenantId      String
  projectId     String
  activityId    String
  activity      ProjectActivity @relation(fields: [activityId], references: [id])
  
  weekStartDate DateTime
  percent       Int             @default(0) // 0-100
  notes         String?
  
  createdAt     DateTime @default(now())

  @@unique([activityId, weekStartDate])
}

model ProjectMilestone {
  id            String   @id @default(uuid())
  tenantId      String
  tenant        Tenant   @relation(fields: [tenantId], references: [id])
  projectId     String
  project       Project  @relation(fields: [projectId], references: [id])
  
  name          String
  date          DateTime
  description   String?
  status        String   @default("PLANNED") // PLANNED, ACHIEVED, MISSED
  
  createdAt     DateTime @default(now())
  updatedAt     DateTime @updatedAt

  activityId    String?
  activity      ProjectActivity? @relation(fields: [activityId], references: [id])
}

model ActivityClosureRecord {
  id            String          @id @default(uuid())
  tenantId      String
  projectId     String
  activityId    String
  activity      ProjectActivity @relation(fields: [activityId], references: [id])
  
  closureCode          String?
  closedAt             DateTime
  
  pmName               String
  directorName         String
  contractorName       String
  
  pmSignature          String? // Base64 or URL
  directorSignature    String?
  contractorSignature  String?
  
  pdfDocumentId        String? // Link to Document system if exists
  
  createdAt            DateTime @default(now())
  
  @@unique([activityId])
}

model ContractorProjectAssignment {
  id        String   @id @default(uuid())
  tenantId  String
  tenant    Tenant   @relation(fields: [tenantId], references: [id])
  
  contractorId String
  contractor   Contractor @relation(fields: [contractorId], references: [id])
  
  projectId    String
  project      Project    @relation(fields: [projectId], references: [id])
  
  assignedAt   DateTime @default(now())
  roleInProject String?
  status       String   @default("ACTIVE")
  
  createdAt    DateTime @default(now())
  updatedAt    DateTime @updatedAt

  @@unique([tenantId, contractorId, projectId])
}

// --- FIELD MANAGEMENT (Phase 6) ---

model MeasurementTemplate {
  id        String   @id @default(uuid())
  projectId String
  project   Project  @relation(fields: [projectId], references: [id])
  name      String
  type      String   @default("CHECKLIST") // CHECKLIST, MILESTONE
  isDefault Boolean  @default(false)
  items     MeasurementTemplateItem[]
  
  activities ProjectActivity[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model MeasurementTemplateItem {
  id         String              @id @default(uuid())
  templateId String
  template   MeasurementTemplate @relation(fields: [templateId], references: [id])
  label      String
  weight     Int // Sum should be 100 per template
  orderIndex Int
}

model FieldUpdate {
  id          String   @id @default(uuid())
  projectId   String
  project     Project  @relation(fields: [projectId], references: [id])
  date        DateTime // The "daily log" date
  
  status      String   @default("DRAFT") // DRAFT, SUBMITTED, APPROVED, REJECTED
  
  submittedAt DateTime?
  approvedAt  DateTime?
  approvedBy  String? // User ID
  rejectionReason String?

  createdBy   String 
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  items       FieldUpdateItem[]
  photos      Photo[]
}

model FieldUpdateItem {
  id             String   @id @default(uuid())
  fieldUpdateId  String
  fieldUpdate    FieldUpdate @relation(fields: [fieldUpdateId], references: [id])
  
  activityId     String
  activity       ProjectActivity @relation(fields: [activityId], references: [id])

  qtyDone        Float? // For QUANTITY type
  checklistState String? // JSON: { itemId: boolean }
  milestoneState String? // JSON: { itemId: boolean }
  manualPercent  Int?
  
  notes          String?
  isRisk         Boolean @default(false)
  overrideJustification String?
  
  suggestedPercent Int?
  confidenceScore  Int? // 0-100
  deltaFromLast    Int?
  requiresReview   Boolean @default(false)
}

model Photo {
  id             String   @id @default(uuid())
  projectId      String
  project        Project  @relation(fields: [projectId], references: [id])
  
  activityId     String?
  activity       ProjectActivity? @relation(fields: [activityId], references: [id])
  
  fieldUpdateId  String?
  fieldUpdate    FieldUpdate? @relation(fields: [fieldUpdateId], references: [id])
  
  urlMain        String
  urlThumb       String?
  
  width          Int?
  height         Int?
  sizeBytes      Int?
  hash           String? // SHA-256 for dedup/integrity

  dailyEntryId   String?
  dailyEntry     FieldDailyEntry? @relation(fields: [dailyEntryId], references: [id])

  capturedAt     DateTime?
  uploadedAt     DateTime @default(now())
  createdBy      String
}

model Issue {
  id             String   @id @default(uuid())
  projectId      String
  project        Project  @relation(fields: [projectId], references: [id])
  
  // Punch List Pro Fields
  code           Int?     // Auto-increment per project (handled in app logic)
  type           String   @default("ISSUE") // ISSUE (Legacy), PUNCH_LIST
  
  title          String
  description    String?
  severity       String   @default("MEDIUM") // HIGH, MEDIUM, LOW, CRITICAL
  status         String   @default("OPEN") // OPEN, IN_PROGRESS, READY_FOR_VALIDATION, BLOCKED, DONE, CLOSED, REOPENED
  
  // Location Hierarchy
  locationBuilding String?
  locationLevel    String?
  locationZone     String?
  
  // Categories
  trade          String?
  
  // Assignment
  ownerUserId    String?
  contractorId   String?
  contractor     Contractor? @relation(fields: [contractorId], references: [id])
  
  dueDate        DateTime?
  
  // Validation Workflow
  readyForValidationAt DateTime?
  validatedAt          DateTime?
  validatedBy          String? // User ID
  reopenedAt           DateTime?
  reopenedBy           String? // User ID
  
  // Phase 16 Legacy Fields (maintained for compatibility)
  closedAt       DateTime?
  
  // Links
  activityId     String?
  activity       ProjectActivity? @relation(fields: [activityId], references: [id])
  
  comments       Comment[]

  createdBy      String
  createdAt      DateTime @default(now())
  updatedAt      DateTime @updatedAt
}

model Comment {
  id          String   @id @default(uuid())
  
  // Polymorphic-ish linking
  issueId     String?
  issue       Issue?   @relation(fields: [issueId], references: [id])
  
  // Could link to FieldUpdate or Activity too if needed, but starting with Issues
  
  text        String
  createdBy   String
  createdAt   DateTime @default(now())
}

// --- PHASE 7: FIELD QUICK REPORTING ---

model FieldDailyReport {
  id          String   @id @default(uuid())
  projectId   String
  project     Project  @relation(fields: [projectId], references: [id])
  date        DateTime // YYYY-MM-DD
  status      String   @default("DRAFT") // DRAFT, SUBMITTED, APPROVED
  createdBy   String   // UserId
  submittedAt DateTime?
  approvedAt  DateTime?
  approvedBy  String?
  
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt
  
  entries     FieldDailyEntry[]
  
  @@unique([projectId, date])
}

model FieldDailyEntry {
  id                 String           @id @default(uuid())
  dailyReportId      String
  dailyReport        FieldDailyReport @relation(fields: [dailyReportId], references: [id])
  
  scheduleActivityId String?          // Optional link to ProjectActivity
  activity           ProjectActivity? @relation(fields: [scheduleActivityId], references: [id])
  
  wbs                String?          // Snapshot
  activityName       String
  
  status             String           // NOT_STARTED, IN_PROGRESS, DONE, BLOCKED
  progressChip       Int?             // 0, 25, 50, 75, 100
  note               String?
  
  createdAt          DateTime         @default(now())
  updatedAt          DateTime         @updatedAt
  
  photos             Photo[]
  
  createdBy          String?          // User ID of the actual editor
}

model Notification {
  id        String   @id @default(uuid())
  userId    String
  user      User     @relation(fields: [userId], references: [id])
  type      String   // DUE_SOON, OVERDUE, NO_UPDATE, MENTION, REQUEST_UPDATE
  entityType String  // ACTIVITY, ISSUE
  entityId   String
  message    String
  readAt     DateTime?
  createdAt  DateTime @default(now())
}
